[tool.poetry]
name = "sablier-v2-exactly-protocol"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "^2.1.1"
numpy = "^1.26.1"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
mypy = "^1.6.1"
pylint = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
